# claude-code-sdlc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  SKILL.md  plugin.json
.claude-plugin/: marketplace.json  plugin.json
agents/: bizreq-analyst.md  compliance-checker.md  conversation-designer.md  data-analyst.md  discovery-analyst.md  feature-architect.md  gate-repair.md  multi-reviewer.md  (+5 more)
scripts/: .coverage  advance_phase.py  audit_gates.py  check_channel.py  check_dependencies.py  check_gates.py  check_spec.py  ci_tokens.py  findings_model.py  generate_handoff_report.py  generate_phase_report.py  generate_status.py  harness_manifest.py  init_project.py  install_harness.py  intake_documents.py  map_deep_plan_artifacts.py  new_spec.py  phase_model.py  pyproject.toml  record_findings.py  risk_model.py  scorecard.py  sync_kit.py  synthesize_spec.py  track_artifacts.py  track_decisions.py  track_specs.py  upgrade_harness.py  validate_channel.py  validate_frozen_layer.py  validate_profile.py
scripts/tests/: conftest.py  test_advance_signoff.py  test_check_channel.py  test_check_gates.py  test_check_spec.py  test_ci_tokens.py  test_findings_model.py  test_generate_handoff_report.py  test_generate_status.py  test_golden_repo.py  test_init_project.py  test_install_harness.py  test_new_spec.py  test_payload_completeness.py  test_record_findings.py  test_risk_model.py  test_scorecard.py  test_track_decisions.py  test_track_specs.py  test_upgrade_harness.py  test_validate_channel.py  test_validate_profile.py
scripts/tests/golden/: enterprise-tree.txt
(+162 files in other folders)
